<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">嘟嘟噜游戏</string>
    <string name="content_column">Content</string>
    <string name="page_referrers">Referrers</string>
    <string name="refresh_action">Refresh</string>
    <string name="logout_action">Logout</string>
    <string name="page_news">News</string>
    <string name="page_users">Users</string>
    <string name="page_checkins">Check In\'s</string>
    <string name="title_column">Title</string>
    <string name="location_column">Location</string>
    <string name="user_column">User</string>
    <string name="date_column">Date</string>
    <string name="error_loading_users">Loading users failed</string>
    <string name="error_loading_news">Loading news failed</string>
    <string name="error_loading_checkins">Loading check-ins failed</string>
    <string name="no_users">No Users</string>
    <string name="no_news">No News</string>
    <string name="avatar">Avatar</string>
    <string name="choose">Choose</string>

    <!-- AuthenticatorActivity -->
    <string name="label_email_address">Email Address</string>
    <string name="label_password">Password</string>
    <string name="label_sign_in">Sign In</string>
    <string name="message_signing_in">Signing in…</string>
    <string name="blank_field_warning">Please populate this field</string>
    <string name="signup_link">New to Bootstrap? &lt;a href=http://www.androidbootstrap.com>Click here&lt;/a> to learn more.</string>
    <string name="message_bad_credentials">Email Address or Password is incorrect</string>
    <string name="message_auth_failed">Please enter a valid password</string>
    <string name="message_auth_failed_new_account">Please enter a valid email address &amp; password</string>
    <string name="timer_running">Timer is running</string>
    <string name="timer_is_paused">Timer is paused</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="title_timer">Timer</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="title_home">Home</string>
    <string name="title_activity_browser">BrowserActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">分享</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="menu_check_update">检查更新</string>
    <string name="menu_about_us">关于我们</string>
    <string name="action_play">开始玩</string>
    <string name="action_refresh">刷新</string>
    <string name="action_category">游戏分类</string>
    <string name="action_hot">游戏排行</string>
    <string name="page_user_center">用户中心</string>
    <string name="page_web_game">马上玩</string>
    <string name="page_native_game">下载玩</string>
    <string name="title_activity_about_us">关于我们</string>

    <string name="no_games">Oh,No!还没有游戏哦亲!</string>
    <string name="about_us_intro">没错!我们是一群死宅!\n\n没错!我们超级喜欢玩游戏!\n\n没错!我们期待与您一起分享游戏的乐趣!</string>

</resources>