<?xml version="1.0" encoding="utf-8"?>


<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/refresh_action"
        bootstrap:showAsAction="always"></item>

    <item
        android:id="@+id/feedback"
        android:title="@string/menu_feedback"
        bootstrap:showAsAction="never"></item>

    <item
        android:id="@+id/check_update"
        android:title="@string/menu_check_update"
        bootstrap:showAsAction="never"></item>

    <item
        android:id="@+id/about_us"
        android:title="@string/menu_about_us"
        bootstrap:showAsAction="never"></item>

    <!--<item-->
    <!--android:id="@+id/logout"-->
    <!--bootstrap:showAsAction="never"-->
    <!--android:title="@string/logout_action" >-->
    <!--</item>-->

</menu>