<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/chronometer"
        style="@style/TimerChronometer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="00:00:00" />

    <Button
        android:id="@+id/start"
        style="@style/BootstrapButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start" />

    <Button
        android:id="@+id/stop"
        style="@style/BootstrapButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:visibility="gone" />

    <Button
        android:id="@+id/pause"
        style="@style/BootstrapButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        android:visibility="gone" />

    <Button
        android:id="@+id/resume"
        style="@style/BootstrapButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/resume"
        android:visibility="gone" />

</LinearLayout>